Included VM options inside build.sbt